--- a/template/package.json
+++ b/template/package.json
@@ -12,16 +12,20 @@
     "@vicons/carbon": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vicons/material": "^0.12.0",
+    "mitt": "^3.0.0",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^3.0.0",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "naive-ui": "^2.32.1",
+    "style-resources-loader": "^1.5.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
+    "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "vue-tsc": "^0.38.4"
   }
 }
